# local_agents

./: .gitignore  CLAUDE.md  CLI_IMPLEMENTATION_REPORT.md  MACBOOK_PRO_OPTIMIZATION.md  README.md  calculator.py  feature-dev_summary.md  install.sh  next_steps.md  pyproject.toml  pytest.ini  run_tests.py  step_1_plan.txt  test_cli_integration.py
.github/: README.md  TESTING.md
.github/workflows/: build.yml  pr-check.yml  test.yml
docs/: IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  TEST_RESULTS_SUMMARY.md  next_steps.md  plan_phase5.md
src/local_agents/: __init__.py  __main__.py  base.py  benchmarks.py  cli.py  config.py  exceptions.py  file_manager.py  hardware.py  ollama_client.py  performance.py
src/local_agents/agents/: __init__.py  coder.py  planner.py  reviewer.py  tester.py
src/local_agents/workflows/: __init__.py  orchestrator.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_integration.py  test_cli_integration.py  test_performance_integration.py  test_workflows.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_base.py  test_config.py  test_hardware.py  test_orchestrator.py  test_performance.py
tests/unit/test_agents/: __init__.py  test_coder.py  test_planner.py  test_reviewer.py  test_tester.py
